# ariadne-pydantic-class-on-scalar

./: .gitignore  README.md  pyproject.toml
example/: example.py  scalars.py  variants.py
example/graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_q1.py
fix_1/: a.py  b.py  c.py
fix_2/: a.py  c.py
pydantic_only/: b.py
schema/: schema.graphql
schema/query/: query.graphql
